--- a/LAM/css/login.css
+++ b/LAM/css/login.css
@@ -8,7 +8,7 @@ body {
   /* background-image: url("https://images.unsplash.com/photo-1523297927020-8b58406e40f7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"); */
   width: 100%;
   height: 100vh;
-  background-color: rgb(31, 31, 56);
+  background-color: lightcyan;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -19,24 +19,34 @@ body {
 .form {
   display: flex;
   position: relative;
-  height: 400px;
-  width: 300px;
-  /* backdrop-filter: blur(25px); */
-  border: 2px solid rgb(134, 133, 133);
+  height: 450px;
+  width: 630px;
+  /* border: 2px solid rgb(134, 133, 133); */
   justify-content: center;
   align-items: center;
-  /* padding: 10px; */
-  /* padding: 10px; */
+  background-color: rgba(225, 225, 225, 0.721);
+}
+.form-image img {
+  width: 300px;
+  height: 300px;
+}
+h1 {
+  color: brown;
 }
 .form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+.form-containt {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-left: 30px;
 }
-h2 {
-  color: white;
-}
+
 input {
   width: 200px;
   height: 25px;
@@ -52,7 +62,7 @@ input {
   margin: 20px; */
 }
 label {
-  color: white;
+  /* color: white; */
   font-size: 14px;
 }
 .login {
@@ -65,7 +75,7 @@ label {
   border: 0px;
 }
 p {
-  color: white;
+  color: brown;
   margin-top: 15px;
   font-size: 16px;
 }
